# GL-TD2

./: .gitignore  Automate.cpp  Automate.h  CMakeLists.txt  E0.cpp  E0.h  E1.cpp  E1.h  E2.cpp  E2.h  E3.cpp  E3.h  E4.cpp  E4.h  E5.cpp  E5.h  E6.cpp  E6.h  E7.cpp  E7.h  E8.cpp  E8.h  E9.cpp  E9.h  EOF.cpp  EOF.h  EXE  EndOfFile.cpp  EndOfFile.h  Etat.cpp  Etat.h  Expr.cpp  Expr.h  ExprBin.cpp  ExprBin.h  ExprMult.cpp  ExprMult.h  ExprPlus.cpp  ExprPlus.h  FermePar.cpp  (+16 more)
tests/: simpletests.sh  tests.txt
